<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/peopleContainerFragment"
        android:title="@string/people_text"
        android:icon="@drawable/ic_baseline_people_24"

        />

    <item
        android:id="@+id/postContainerFragment"
        android:title="@string/post_text"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:checkable="true"
        />

    <item
        android:id="@+id/chatContainerFragment"
        android:title="@string/chat_text"
        android:icon="@drawable/ic_baseline_chat_24" />

    <item
        android:id="@+id/settingContainerFragment"
        android:title="@string/settings_text"
        android:icon="@drawable/ic_baseline_settings_24" />

</menu>